--- a/css/style.css
+++ b/css/style.css
@@ -883,6 +883,7 @@ p {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: block;
   padding: 10px;
   width: 95px;
   font-size: 17px;
@@ -1934,6 +1935,7 @@ p {
   padding: 0;
   font-size: 0;
   list-style: none;
+  text-align: left;
 }
 
 .footer-menu li {
@@ -1956,11 +1958,11 @@ p {
 }
 
 .footer-menu-2 li {
-  margin-left: 64px;
+  margin-left: 59px;
 }
 
 .footer-menu-2 li:first-child {
-  margin-left: 10px;
+  margin-left: 25px;
 }
 
 .footer-menu-2 a {
